# AgenticForce

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
agency/: __init__.py  __main__.py  agents.py  cli.py  config.py  io.py  llm.py  models.py  orchestrator.py  pipeline.py  prompts.py  storage.py  vision.py
backend/: .env.example  .gitignore  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/agents/: art_director.py  base.py  brand_guardian.py  brand_voice.py  copywriter.py  creative_director.py  designer.py  producer.py  registry.py  researcher.py  strategist.py
backend/app/api/: agents.py  auth.py  blueprints.py  brand_bible.py  briefs.py  clients.py  creative_memory.py  dashboard.py  deliverables.py  events.py  export.py  images.py  lora.py  orchestrator.py  projects.py  review.py  specialist_pipelines.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/app/services/: agent_protocol.py  auth.py  creative_memory.py  event_bus.py  export.py  finishing.py  garment_pipeline.py  image_gen.py  lora_training.py  orchestrator.py  pattern_recognition.py  pipeline.py  print_production.py  quality_scoring.py
examples/: client-brief.json
frontend/: package-lock.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/clients/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/projects/: page.tsx
frontend/src/app/review/: page.tsx
frontend/src/components/: app-shell.tsx  sidebar.tsx
frontend/src/lib/: api.ts  types.ts
tests/: test_io.py  test_phase1.py
(+5 files in other folders)
