[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenticforce"
version = "0.1.0"
description = "Solo-operated agentic creative agency operating system."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "AgenticForce" }
]
license = { text = "MIT" }
dependencies = [
  "pypdf"
]

[project.scripts]
agencyforce = "agency.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["agency*"]
